refactor: 全栈架构审计整改，补 CI 门禁与架构约束测试